# kvitable

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  kvitable.cabal
.github/workflows/: ci.yml
_eng_/: dev.eng  doc.eng  release.eng
examples/: hundreds_all.md  zoo.md
src/Data/: KVITable.hs
src/Data/KVITable/: Render.hs
src/Data/KVITable/Internal/: Helpers.hs
src/Data/KVITable/Render/: ASCII.hs  HTML.hs  Internal.hs
test/: AsciiRenderTests.hs  HTMLRenderTests.hs  SampleTables.hs  TestMain.hs  TestQQDefs.hs  bigsquare.md  evenodd.md
